# gm2

./: .gitignore
Intro Stuff/: HW2-More Plots.ipynb  HW3FittingByBunchNum.ipynb  HW3FittingByColoNum.ipynb  HW3FittingTesting.ipynb  HW4CaloNumFit.ipynb  HW4EvsTforXYRanges.ipynb  HW4MiscPlots.ipynb  HW4TChain.ipynb  HW4XRanges.ipynb  HW4YRanges.ipynb  HW5ManyParamFit.ipynb  HW5ModulusTimeAxis.ipynb  HW5Parameters.ipynb  HW6GaussianFit.py  HW6Ystuff.ipynb  W6GaussianFit.ipynb  firstSteps.ipynb  firstSteps.py  tutorial.ipynb
Intro Stuff/.ipynb_checkpoints/: 10-25_PracticeSession-checkpoint.ipynb  (+13 more)
YMeanSummaries/: DoesntWork.ipynb  YPosSummary.ipynb
blinders/blinders/test/: CMakeLists.txt  notBlinded.fcl  testblinder_module.cc
blinding/: Blinders.cc  Blinders.hh  BlindersPy3.py  python_header.h  rlib  testBlinding.C  testBlinding.cc  testBlindingPy3.py
caloTrackerMatching/: caloTrackerMatching.ipynb
earlyPosition/: EnergyScanOneCalo.ipynb  avgC.csv  earlyPosition_doubleExp.ipynb  gif_maker.ipynb  rms.ipynb  summarize.ipynb
pileup_ml/: Cardio_dnn.ipynb  GERDA_dnn.ipynb  GERDA_dnn_v2.ipynb  GERDA_dnn_v2_1.ipynb  GERDA_dnn_v3.ipynb  calospliland.py  dnn_v3.ipynb  fclParse.py  island_data_maker_v2.ipynb  island_object_test.ipynb  island_object_test_v2.ipynb  notes.py  root_playground.ipynb  sample_data_4.csv  spliland-Copy1.py  spliland.py  spliland_config.json  spliland_v2.py  template_data_maker.ipynb  template_first_dnn.ipynb  template_ml.ipynb  template_ml_broad.ipynb  template_ml_narrow.ipynb  template_old_data_maker.ipynb  templates.ipynb
(+1897 files in other folders)
